--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -1,8 +1,17 @@
-framework:
-    validation:
-        email_validation_mode: html5
-
-        # Enables validator auto-mapping support.
-        # For instance, basic validation constraints will be inferred from Doctrine's metadata.
-        #auto_mapping:
-        #    App\Entity\: []
+#App\Entity\Medecin:
+#    properties:
+#        tel:
+#            - Length:
+#                  min: 10
+#                  max: 10
+#                  minMessage: 'Le numéro de téléphone inscrit doit avoir au minimum {{ limit }} caractères.'
+#                  maxMessage: 'Le numéro de téléphone inscrit doit avoir au maximum {{ limit }} caractères.'
+#
+#framework:
+#    validation:
+#        email_validation_mode: html5
+#
+#        # Enables validator auto-mapping support.
+#        # For instance, basic validation constraints will be inferred from Doctrine's metadata.
+#        #auto_mapping:
+#        #    App\Entity\: []
